# org-standards

./: .ai-session-template.md  .pre-commit-config.yaml  CONFIG_PHILOSOPHY.md  EMERGENCY_BYPASS_ANALYSIS_2025-10-25.md  ERD-quality-gates-policy-v1.1.0.md  EXECUTION-PLAN-quality-gates-policy-improvement.md  HANDOFF_2025-10-25.md  PROMOTION.md  PR_REVIEW_SUMMARY_2025-10-25.md  README.md  SECURITY_AUDIT_DEBUG_2025-10-25.md  TECHNICAL_DEBT_ANALYSIS.md  pyproject.toml
.ai-sessions/2025-10-23/: rename-fashion-extract-code-refs.md
.ai-sessions/2025-10-25/: FINAL-simplified-implementation-plan.md  SUMMARY-stage-aware-quality-gates.md  design-stage-aware-quality-gates.md  review-principal-engineer.md  review-test-architect.md
.ai-sessions/2025-10-26/: commit-propagate-introspection.md
.ai-sessions/2025-10-27/: commit-03aa57a.md  commit-103334.md  commit-110521.md  commit-125403.md  commit-1f87b4a.md  commit-5571342.md
.ai-sessions/2025-10-28/: commit-160226.md  commit-164424.md
.claude/: README.md  brd-prd-erd-standards.md  code-review-checklists.md  context-management.md  execution-plan-standards.md  grandfather-policy.md  introspection.md  memory-sync-workflow.md  org-context.md  planning-checklist.md  quality-standards.md  schema-standards.md  technical.md  testing.md  workflow.md
.claude/checklists/: pre-commit-self-check.md  pre-push-review.md
.claude/review-checklists/: code-review-checklist.md
.devcontainer/: README.md  devcontainer.json  neerajdev.code-workspace.template
.github/workflows/: README.md  ci.yml  propagate-to-repos.yml  quality-gates.yml  reusable-quality-gates.yml  validate-config.yml
claude-code/: GITHUB-ACTIONS-DEPLOYMENT.md  HOOKS-SYNC.md  README.md  activate-introspection.sh  install-hooks.sh  managed-settings.json  settings.template.json  setup-introspection.sh  sync-claude-settings.sh
claude-code/hooks/: README.md  track_context_size.py  track_messages_context.py  track_reads.py
claude-code/introspection/: CHANGELOG.md
claude-code/introspection/core/: __init__.py  pattern_detector.py
claude-code/introspection/v1.0.0/core/: failure_tracker.py  pattern_detector.py
claude-code/introspection/v1.0.0/hooks/: README-context-warning.md  check-context.sh  context_warning.py  post_tool_use.py  session_end.py
config/: EVOLUTION.md  README.md  ROLLBACK.md  quality-gates.local.yaml.example  quality-gates.schema.json  quality-gates.yaml
devcontainer/: Dockerfile  README.md  devcontainer.json
git-hooks/: install.sh  pre-commit  pre-push
python/: .pre-commit-config.yaml  README.md  pyproject.toml  quality_gates.py  requirements-dev.txt
scripts/: setup-neerajdev-workspace.sh  sync-claude-docs.sh  validate-config.py  validate-introspection.py  validate_mcp_config.py  worktree-manager.py
tests/: __init__.py  test_placeholder.py  test_quality_gates_integration.py  test_quality_gates_stages.py  test_quality_gates_unit.py
workflow/: AI_INTROSPECTION.md  BUSINESS_ASK_WORKFLOW.md  DEFINITION_OF_DONE.md  PRD_TEMPLATE.md
